adding a transaction test to compare explicit multi-statememt transactions vs implicit transactions consolidated into a single statement